[gd_scene load_steps=4 format=3 uid="uid://cu7lnu8p1f0ff"]

[ext_resource type="Theme" uid="uid://70yhvrg7ebw" path="res://ui/theme/theme.tres" id="1_krcbd"]
[ext_resource type="Script" path="res://ui/options/Options.gd" id="2_c1eih"]
[ext_resource type="AudioStream" uid="uid://ibiqxk0peqso" path="res://assets/sfx/ui_point.ogg" id="3_tmysm"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("Center/VBoxContainer/SFX/Slider")
focus_next = NodePath("Center/VBoxContainer/SFX/Slider")
focus_mode = 2
theme = ExtResource("1_krcbd")
script = ExtResource("2_c1eih")

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tmysm")
volume_db = -15.0
bus = &"Sound"

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Center"]
layout_mode = 2

[node name="Title" type="Label" parent="Center/VBoxContainer"]
layout_mode = 2
text = "MM_OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="HBoxContainer" parent="Center/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="Center/VBoxContainer/SFX"]
layout_mode = 2
text = "O_SFX"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Slider" type="HSlider" parent="Center/VBoxContainer/SFX"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
min_value = -24.0
max_value = 24.0
value = 6.0
tick_count = 1

[connection signal="drag_ended" from="Center/VBoxContainer/SFX/Slider" to="." method="_on_h_slider_drag_ended"]
[connection signal="focus_entered" from="Center/VBoxContainer/SFX/Slider" to="." method="_on_h_slider_focus_entered"]
[connection signal="value_changed" from="Center/VBoxContainer/SFX/Slider" to="." method="_on_h_slider_value_changed"]
